--- a/contents/docs/getting-started/introduction/index.mdx
+++ b/contents/docs/getting-started/introduction/index.mdx
@@ -1,23 +1,12 @@
 ---
-title: Introduction
-description: Welcome to the Ultimate Git Guide, your go-to resource for mastering Git, the industry-standard version control system.
+title: 介绍
+description: 欢迎使用 SelectDB Studio。
 ---
-Inside, you’ll find clear explanations of Git commands
-with detailed flags and real-world examples.
-Learn not just how to use commands like `git add`,
-`git commit`, and `git rebase`, but also when
-and why to apply them in real-world scenarios—
-whether you're working solo, collaborating with a
-team, or contributing to open-source projects.
-We’ve included tips and tricks for maintaining a clean
-commit history, resolving merge conflicts, and using
-Git’s `reset` and `revert` features to undo mistakes
-and fix bugs.
 
-You’ll also explore advanced Git features that can
-boost your productivity and make troubleshooting
-easier.
+SelectDB Studio 是基于原来云/企业版 WebUI 发展而来的桌面版客户端，支持 MacOS / Windows 等桌面操作系统。
 
-With practical advice and best practices, this guide will help you streamline your Git workflow and use Git like a pro.
-#### Let’s get started!
+用户可以直接下载安装使用桌面客户端而不需要 Linux 服务器部署服务/升级版本，降低用户的使用/部署成本，触达更多用户。我们也可以把更多功能给用户使用接收反馈，促进商业产品的功能稳定可靠。
+
+桌面客户端所有功能和 WebUI 保持一致，但增加了多连接/SSH Tunnel登录集群，支持 Apache Doris 和 SelectDB。
+
 
